# ncm-classifier-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  STATUS.md  fly.toml  problem.md  pyproject.toml
.claude/skills/hexagonal-boundaries/: SKILL.md
.claude/skills/tdd-discipline/: SKILL.md
.github/workflows/: eval.yml
data/synonyms/: beverage_synonyms.json
data/tipi/: tipi_22_20260608.json  tipi_22_20260612.json  tipi_beverage_20260618.json
docs/: architecture-review-2026-07.md  deployment.md  operational-notes.md
docs/adr/: 0001-chapter-selection.md  0002-verification-deterministic-check.md  0003-walking-skeleton.md  0004-semantic-retrieval-e5-small.md  0005-hierarchical-enrichment.md  0006-subheading-only-enrichment.md  0007-selective-enrichment-rejected.md  0008-embedder-swap-bge-m3-rejected.md  0009-dataset-corpus-expansion-v2-baseline.md  0010-corpus-enrichment-synonyms.md  0011-hybrid-retrieval-bm25-rrf.md  0012-cross-encoder-rerank-rejected.md  0013-gemini-flash-rerank.md  0014-verification-gate-wiring-chapter-coherence-dropped.md  0015-public-deployment-architecture.md  0016-provider-agnostic-llm-integration.md  0017-ncm-code-value-object.md
docs/adr/assets/: 0004-analysis.json  0005-analysis.json  0006-analysis.json  0008-analysis.json
eval/: run_eval.py  schema.py  tipi_version.txt  v1_cases.json  v2_cases.json
scripts/: analyze_adr0004.py  analyze_eval.py  ingest_tipi.py
src/: config.py  main.py
src/api/: dependencies.py  hardening.py  rate_limit.py  routes.py  schemas.py  system.py
src/core/: ports.py
src/core/domain/: enrichment.py  ncm.py  tipi_parsing.py
src/core/use_cases/: classify_product.py
src/core/verification/: deterministic.py
src/llm/: cross_encoder_adapter.py  gemini_client.py  gemini_rerank_adapter.py  generic_llm_rerank_adapter.py  llm_client.py  passthrough_adapter.py
src/retrieval/: bm25_adapter.py  chroma_client.py  embedding.py  hierarchical.py  hybrid.py  naive_adapter.py
tests/integration/retrieval/: test_bge_embedding.py  test_embedding.py  test_retrieve.py
tests/unit/: test_config.py
tests/unit/api/: test_dependencies.py  test_error_handling.py  test_middleware.py  test_openapi_docs.py  test_rate_limit.py  test_routes.py  test_schemas.py  test_system.py
tests/unit/core/domain/: test_ncm.py  test_ncm_code.py
tests/unit/core/use_cases/: test_classify_product.py
tests/unit/core/verification/: test_deterministic.py  test_tipi_index.py
tests/unit/eval/: test_eval_against_tipi.py  test_eval_v2.py  test_evaluate_suite.py  test_schema.py  test_schema_v2.py
tests/unit/llm/: test_cross_encoder_adapter.py  test_gemini_client.py  test_gemini_rerank_adapter.py  test_generic_llm_rerank_adapter.py  test_llm_client.py  test_passthrough_adapter.py
tests/unit/retrieval/: test_bge_embedding.py  test_bm25_adapter.py  test_chroma_client.py  test_embedder_factory.py  test_embedding.py  test_hierarchical.py  test_hybrid.py  test_index_and_retrieve.py  test_naive_adapter.py
tests/unit/scripts/: test_ingest_tipi.py
tests/unit/verification/: test_validate_ncm_format.py
