[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncm-classifier"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7",
    "chromadb>=0.5",
]

[project.optional-dependencies]
# Gemini SDK — only needed once the LLM-rerank path is implemented
# (src/llm/gemini_client.py is a stub today). Kept out of the core deps so a
# default install / CI run pulls nothing for an unused code path.
llm = [
    "google-genai>=1.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    # Pinned exactly (not >=) so formatting/lint and type-check results are
    # deterministic across machines and CI. Bump deliberately, not implicitly.
    "ruff==0.15.16",
    "mypy==2.1.0",
]
scripts = [
    "openpyxl>=3.1",
]
# Semantic retrieval (ADR-0004): sentence-transformers + torch.
# torch must be installed CPU-only first, from the dedicated index, to avoid
# the ~2 GB CUDA wheel on Linux CI. See README "Install (development)".
ml = [
    "sentence-transformers>=3.0,<4",
    "torch>=2.2,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
